syntax = "proto3";
package com.pokegoapi.main;

message InventoryRequestProto {
    int64 timestamp = 1;
}


message PokemonProto {
    fixed64 entId = 1;
    int32 PokemonId = 2;
    int32 Cp = 3;
    int32 Stamina = 4;
    int32 MaxStamina = 5;
    int32 Move1 = 6;
    int32 Move2 = 7;
    int32 DeployedFortId = 8;
    string OwnerName = 9;
    bool IsEgg = 10;
    double EggKmWalkedTarget = 11;
    double EggKmWalkedStart = 12;
    int32 Origin = 14;
    float HeightM = 15;
    float WeightKg = 16;
    int32 IndividualAttack = 17;
    int32 IndividualDefense = 18;
    int32 IndividualStamina = 19;
    float CpMultiplier = 20;
    int32 Pokeball = 21;
    uint64 CapturedS2CellId = 22;
    int32 BattlesAttacked = 23;
    int32 BattlesDefended = 24;
    int32 EggIncubatorId = 25;
    int64 CreationTimeMs = 26;
    int32 NumUpgrades = 27;
    float AdditionalCpMultiplier = 28;
    bool Favorite = 29;
    string Nickname = 30;
    bool FromFort = 31;

}

message InventoryResponseProto {
    int64 timestamp = 2;
    repeated InventoryItemResponseProto items = 3;

    message InventoryItemResponseProto {
        int64 timestamp = 1;
        InventoryItemProto item = 3;
    }
}


message InventoryItemProto {
    PokemonProto Pokemon = 1;
    ItemProto Item = 2;
    PokedexEntryProto PokedexEntry = 3;
    PlayerStatsProto PlayerStats = 4;
    PlayerCurrencyProto PlayerCurrency = 5;
    PlayerCameraProto PlayerCamera = 6;
    InventoryUpgradesProto InventoryUpgrades = 7;
    AppliedItemProto AppliedItem = 8;
    EggIncubatorProto EggIncubators = 9;
    PokemonFamilyProto PokemonFamily = 10;

    message ItemProto {
        int32 Item = 1;
        int32 Count = 2;
        bool Unseen = 3;
    }

    message PokedexEntryProto {
        int32 PokedexEntryNumber = 1;
        int32 TimesEncountered = 2;
        int32 TimesCaptured = 3;
        int32 EvolutionStonePieces = 4;
        int32 EvolutionStones = 5;
    }

    message PlayerStatsProto {
        int32 Level = 1;
        int64 Experience = 2;
        int64 PrevLevelExp = 3;
        int64 NextLevelExp = 4;
        float KmWalked = 5;
        int32 NumPokemonEncountered = 6;
        int32 NumUniquePokedexEntries = 7;
        int32 NumPokemonCaptured = 8;
        int32 NumEvolutions = 9;
        int32 PokeStopVisits = 10;
        int32 NumberOfPokeballThrown = 11;
        int32 NumEggsHatched = 12;
        int32 BigMagikarpCaught = 13;
        int32 NumBattleAttackWon = 14;
        int32 NumBattleAttackTotal = 15;
        int32 NumBattleDefendedWon = 16;
        int32 NumBattleTrainingWon = 17;
        int32 NumBattleTrainingTotal = 18;
        int32 PrestigeRaisedTotal = 19;
        int32 PrestigeDroppedTotal = 20;
        int32 NumPokemonDeployed = 21;
        int32 SmallRattataCaught = 23;
    }

    message AppliedItemProto {
        int32 Item = 1;
        int32 ItemType = 2;
        int64 ExpirationMs = 3;
        int64 AppliedMs = 4;
    }

    message PlayerCameraProto {
        bool DefaultCamera = 1;
    }


    message PlayerCurrencyProto {
        int32 Gems = 1;
    }

    message InventoryUpgradesProto {
        int32 InventoryUpgrade = 1;
    }

    message EggIncubatorProto {
        string ItemId = 1;
        ItemProto Item = 2;
        int32 IncubatorType = 3;
        int32 UsesRemaining = 4;
        int64 PokemonId = 5;
        double StartKmWalked = 6;
        double TargetKmWalked = 7;
    }

    message PokemonFamilyProto {
        int32 FamilyId = 1;
        int32 Candy = 2;
    }
}

// POKEMON TRANSFER
message TransferPokemonProto {
    fixed64 PokemonId = 1;
}

message TransferPokemonOutProto {
    int32 Status = 1;
    int32 CandyAwarded = 2;
}

// EVOLVE
message EvolvePokemonProto {
    fixed64 PokemonId = 1;
}


message EvolvePokemonOutProto {
    int32 Result = 1;
    PokemonProto EvolvedPokemon = 2;
    int32 ExpAwarded = 3;
    int32 CandyAwarded = 4;
}
 